--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,5 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# https://qiita.com/settings/tokens/new
+qiitaToken=1cb1365993b3e7f1c0ef02a98ab9888951d78b78
